--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.2.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>4.2.2.RELEASE</version>
 		</dependency>
@@ -57,7 +62,7 @@
     </dependencies>
     
     <build>
-    	<finalName>${artifactId}</finalName>
+    	<finalName>${project.artifactId}</finalName>
     	<plugins>
 			<plugin>
 				<!-- http://wiki.eclipse.org/Jetty/Feature/Jetty_Maven_Plugin -->
@@ -65,12 +70,12 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>8.1.7.v20120910</version>
 				<configuration>
-					<stopPort>9966</stopPort>
+					<stopPort>9100</stopPort>
 					<stopKey>foo</stopKey>
 					<scanIntervalSeconds>0</scanIntervalSeconds>
 					<connectors>
 						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>8080</port>
+							<port>9000</port>
 							<maxIdleTime>60000</maxIdleTime>
 						</connector>
 					</connectors>
