--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	<!-- spring 配置文件的加载 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:META-INF/spring/spring-*.xml</param-value>
+		<param-value>classpath:META-INF/spring/spring-config.xml</param-value>
 	</context-param>
 	<!-- 监听器 -->
 	<listener>
