--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
 				</includes> 
 			</resource>
 			<resource>
-				<directory>src/main/profiles/{profileId}</directory>
+				<directory>src/main/profiles/${profileId}</directory>
 				<includes>
 					<include>**/*</include>
 				</includes>
